<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="10dp">


    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/WhiteTextColor">


<ImageButton
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:id="@+id/cancelpopup"
    android:background="@drawable/close_icon"
    android:layout_gravity="right"
    />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="53dp"
            android:layout_height="19dp"
            android:src="@drawable/cab_fill_icon"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oro_cab_title"
            android:textSize="16sp"
            android:textColor="@color/TitleColor"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="5dp"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="19dp"
            android:src="@drawable/meter_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rs"
                    android:textSize="19sp"
                    android:textColor="@color/TitleColor"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="40"
                    android:id="@+id/BaseFare"
                    android:textSize="19sp"
                    android:textColor="@color/TitleColor" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/base_fare"
                android:textSize="13sp"
                android:textColor="@color/GreyTextColor"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10 /km"
                android:id="@+id/Basekm"
                android:textSize="19sp"
                android:textColor="@color/TitleColor"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/per_km"
                android:textSize="13sp"
                android:textColor="@color/GreyTextColor"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.2 /min"
                android:id="@+id/Basemin"
                android:textSize="19sp"
                android:textColor="@color/TitleColor"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ride_time"
                android:textSize="13sp"
                android:textColor="@color/GreyTextColor"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet"
            android:textSize="28sp"
            android:textColor="@color/TitleColor"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fare_card_tc1"
            android:textSize="14sp"
            android:textColor="@color/TitleColor"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet"
            android:textSize="28sp"
            android:textColor="@color/TitleColor"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fare_card_tc2"
            android:textSize="14sp"
            android:textColor="@color/TitleColor"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
