<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical" tools:context=".MainActivity"
        android:background="@color/GreyBgColor"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <!-- Company Logo -->
        <ImageView
            android:layout_width="140dp"
            android:layout_height="67dp"
            android:src="@drawable/oro_cab_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>
        <!-- Company Logo -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with"
            android:textSize="18sp"
            android:textColor="@color/TitleColor"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="60dp"/>


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/facebooklogin"
            android:src="@drawable/facebook_icon"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>



        <!-- OR -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/or_bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:visibility="gone"
                android:textColor="@color/TitleColor"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="@color/GreyBgColor"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </LinearLayout>
        <!-- OR -->



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textSize="16sp"
            android:textColor="@color/InputLabelColor"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:id="@+id/Username"
            android:inputType="text"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textColor="@color/InputTextColor"
            android:background="@drawable/input_box"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textColor="@color/InputLabelColor"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:textCursorDrawable="@null"
            android:id="@+id/Password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/InputTextColor"
            android:background="@drawable/input_box"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:id="@+id/SignIn"
            android:text="@string/signin_btn"
            android:textColor="@color/WhiteTextColor"
            android:background="@drawable/black_btn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/passwordlink"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/key_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/InputLabelColor"
                    android:text="@string/forgotpassword"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/sign_up_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:id="@+id/Signuplink"
                    android:textColor="@color/InputLabelColor"
                    android:text="@string/sign_up"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</ScrollView>